<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Sticks</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="None">None</string>
    <string name="playername">Player 1</string>
    <string name="opponentname">Computer</string>
    <string name="defend">Defend</string>
    <string name="attack">Attack</string>

</resources>